--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This is the list of LEIA's firmware significant contributors.
+# This is the list of LEIA's python package significant contributors.
 
 Ryad BENADJILA
 David EL-BAZE
